<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context=".activities.sign_up">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_blue"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_c_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:hint="@string/c_password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/signin_button"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/teal_700"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
    <!--END-->